--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>The Future of Automation: AI, APIs, and Cloud Modernization</title>
+  <title>Context Engineering for AI-Readiness:
+    Unified Semantic Layers Unlocking Enterprise Data</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -19,15 +20,16 @@
 
   <!-- Hero Banner -->
   <div class="relative max-w-5xl mx-auto">
-    <img src="assets/images/top.png" alt="Banner" class="w-full h-45 object-cover  shadow">
+    <img src="assets/images/image1.png" alt="Banner" class="w-full h-45 object-cover  shadow">
   </div>
 
   <!-- Main Container -->
   <div class="max-w-5xl mx-auto bg-white shadow-md mt-6 p-8 rounded">
 
     <!-- Title -->
-    <h1 class="text-3xl font-sans text-center mb-8 text-gray-800">
-      The Future of Automation: AI, APIs, and Cloud Modernization
+    <h1 class="text-3xl font-sans text-center mb-6 text-gray-800 leading-snug">
+      Context Engineering for AI-Readiness:<br>
+      Unified Semantic Layers Unlocking Enterprise Data
     </h1>
 
     <!-- Register Button -->
@@ -37,67 +39,42 @@
       </button>
     </div>
 
-    <div class="flex flex-col md:flex-row gap-8">
-      <!-- Left: Text -->
-      <div class="md:w-2/3 text-gray-800">
-        <p class="mb-4">
-          Take a fresh approach to SAP process automation. As businesses aim
-          to streamline operations and embrace innovation, now is the ideal time
-          to modernize and optimize your workflows. In this session, we'll share
-          key insights and trends to help you redefine your SAP processes for
-          what's next.
-        </p>
-        <h2 class="font-semibold mb-2">Key learnings include:</h2>
-        <ul class="list-disc pl-6 mb-4">
-          <li>Unlocking the potential of SAP Fiori app automation to drive
-            efficiency and agility.</li>
-          <li>Leveraging AI to tackle common SAP material master data
-            challenges and improve accuracy.</li>
-          <li> Embracing end-to-end process automation as the cornerstone of
-            SAP-centric business success.</li>
-          <li>Exploring the latest advancements in SAP automation, including AI,
-            APIs, and cloud modernization, to future-proof your operations.</li>
-        </ul>
 
-        <p class="mb-4">
-          Join us to kickstart your automation journey with actionable strategies
-          and expert insights.
-        </p>
+    <!-- Left: Text -->
+    <div class=" text-gray-800 space-y-4">
+      <p>
+        Today's enterprises need unified semantic layers that seamlessly connect traditional BI, GenBI
+        applications, and emerging AI workloads. As organizations face challenges in making enterprise
+        data truly AI-ready, the focus must shift to creating universal semantic architectures that
+        support current analytics and future knowledge graph capabilities, including YAML- configured
+        semantic layers and Graph-RAG implementations. This architectural approach is not just about
+        data modeling; it is a critical necessity for enabling both business users and AI applications to
+        access consistent, contextual enterprise data
+      </p>
 
-        <p class="font-semibold mb-6">
-          Don't miss this live event on <span class="font-bold">Tuesday, August 12, 11 AM PT / 2 PM ET.</span>
-        </p>
-
-        <!-- Clickable REGISTER NOW text -->
-        <p>
-          <span class="text-red-600 font-bold cursor-pointer hover:underline" id="registerText">REGISTER NOW</span>
-          <span>to attend the webinar </span> <span class="font-bold"> The Future of Automation: AI,
-            APIs, and Cloud Modernization.</span>
-
-        </p>
+      <div class="max-w-5xl mx-auto my-6">
+        <img src="assets/images/image2.png" alt="Context Diagram" class="w-full h-45 object-cover ">
       </div>
 
-      <!-- Right: Speakers -->
-      <div class="md:w-1/3">
-        <h3 class="font-semibold mb-4 text-gray-700">SPEAKERS</h3>
-        <div class="flex items-center mb-6">
-          <img src="assets/images/img3.png" alt="Charles Howard" class="w-20 h-20 rounded-full mr-3 border">
-          <div>
-            <p class="font-semibold">Charles Howard</p>
-            <p class="text-sm text-gray-600">Director, Product Management <br>Precisely</p>
-          </div>
-        </div>
+      <p>
+        Join us to discover semantic layer strategies that promote comprehensive AI readiness and
+        business intelligence modernization.
+      </p>
 
+      <p class="font-semibold">Reserve your seat today!</p>
 
-        <h3 class="font-semibold mb-4 text-gray-700">MODERATOR</h3>
-        <div class="flex items-center">
-          <img src="assets/images/img4.png" alt="Marydee Ojala" class="w-20 h-20 rounded-full mr-3 border">
-          <div>
-            <p class="font-semibold">Marydee Ojala</p>
-            <p class="text-sm text-gray-600">Program Director<br>Data Summit Conference</p>
-          </div>
-        </div>
-      </div>
+      <!-- Clickable REGISTER NOW text -->
+      <p>
+        <span id="registerText" class="text-red-600 font-bold cursor-pointer hover:underline">REGISTER NOW</span>
+        <span> to attend the webinar </span>
+        <span class="font-bold">
+          Context Engineering for AI-Readiness: Unified Semantic Layers Unlocking Enterprise Data.
+        </span>
+      </p>
+
+      <p class="font-semibold">
+        Don't miss this live event on <span class="font-bold">Thursday, September 4, 11 AM PT / 2 PM ET.</span>
+      </p>
     </div>
   </div>
 
