--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <img src="assets/images/image2.png" alt="Context Diagram" class="w-full h-45 object-cover ">
       </div>
 
-      <p>
+      <p class="font-bold">
         Join us to discover semantic layer strategies that promote comprehensive AI readiness and
         business intelligence modernization.
       </p>
 
-      <p class="font-semibold">Reserve your seat today!</p>
+      <p>Reserve your seat today!</p>
 
       <!-- Clickable REGISTER NOW text -->
       <p>
