--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <!-- Main Container -->
-  <div class="max-w-5xl mx-auto bg-white shadow-md mt-6 p-8 rounded">
+  <div class="max-w-5xl mx-auto bg-white mt-6 p-8 rounded">
 
     <!-- Title -->
     <h1 class="text-3xl font-sans text-center mb-6 text-gray-800 leading-snug">
